--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>BeeMazing - Register / Login</title>
   <style>
     body {
@@ -22,10 +22,7 @@
       width: 90%;
       max-width: 400px;
     }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
+    h2 { text-align: center; margin-bottom: 20px; }
     input, button {
       width: 100%;
       margin: 10px 0;
@@ -34,10 +31,7 @@
       border-radius: 5px;
       border: 1px solid #444754;
     }
-    input {
-      background: #1E1F26;
-      color: white;
-    }
+    input { background: #1E1F26; color: white; }
     button {
       background-color: #FFC107;
       color: #212121;
@@ -45,28 +39,15 @@
       border: none;
       cursor: pointer;
     }
-    button:hover {
-      background-color: #FFB300;
-    }
-    .toggle {
-      text-align: center;
-      margin-top: 10px;
-      font-size: 14px;
-    }
-    .toggle a {
-      color: #FFC107;
-      cursor: pointer;
-    }
-    .message {
-      text-align: center;
-      margin-top: 10px;
-      font-size: 14px;
-    }
+    button:hover { background-color: #FFB300; }
+    .toggle { text-align: center; margin-top: 10px; font-size: 14px; }
+    .toggle a { color: #FFC107; cursor: pointer; }
+    .message { text-align: center; margin-top: 10px; font-size: 14px; }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2 id="formTitle">Register 1</h2>
+    <h2 id="formTitle">Register 77</h2>
     <form id="authForm">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
@@ -81,49 +62,48 @@
 
   <script>
     let isRegistering = true;
-  
     const urlParams = new URLSearchParams(window.location.search);
     const invitedAdmin = urlParams.get("admin");
     const invitedUser = urlParams.get("user");
-  
+
     if (invitedAdmin && invitedAdmin !== "null" && invitedAdmin !== "undefined") {
       localStorage.setItem("currentAdminEmail", invitedAdmin);
     }
-  
+
     const form = document.getElementById("authForm");
     const message = document.getElementById("message");
-  
+
     function toggleForm() {
       isRegistering = !isRegistering;
       document.getElementById("formTitle").textContent = isRegistering ? "Register" : "Login";
       document.getElementById("submitBtn").textContent = isRegistering ? "Register" : "Login";
       document.getElementById("toggleText").textContent = isRegistering ? "Already have an account?" : "Don't have an account?";
     }
-  
+
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value.trim();
       const endpoint = isRegistering ? "/register" : "/login";
-  
+
       try {
         const body = isRegistering
           ? { email, password }
           : { email, password, adminEmail: invitedAdmin || email };
-  
+
         const res = await fetch(`https://beemazing.onrender.com${endpoint}`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(body),
         });
-  
+
         const data = await res.json();
         console.log("📥 Response:", data);
-  
+
         if (res.ok && data.success) {
           message.style.color = "#4CAF50";
           message.textContent = isRegistering ? "✅ Registered successfully!" : "✅ Logged in!";
-  
+
           if (data.role === "admin") {
             localStorage.setItem("isAdmin", "true");
             localStorage.setItem("currentAdminEmail", email);
@@ -131,18 +111,17 @@
           } else if (data.role === "user" && data.username) {
             const cleanAdmin = invitedAdmin || email;
             const cleanUser = data.username || invitedUser || "unknown";
-  
+
             localStorage.setItem("isAdmin", "false");
             localStorage.setItem("currentAdminEmail", cleanAdmin);
             localStorage.setItem("currentUser", cleanUser);
-  
+
             setTimeout(() => {
               window.location.href = `mobile/2-UserProfiles/users.html?admin=${cleanAdmin}&user=${cleanUser}`;
             }, 1000);
           } else {
-            throw new Error("❌ Unexpected login format");
+            throw new Error("Unexpected login response format");
           }
-  
         } else {
           message.style.color = "#D32F2F";
           message.textContent = "❌ " + (data.message || "Something went wrong");
@@ -150,10 +129,9 @@
       } catch (err) {
         console.error("❌ Login error:", err);
         message.style.color = "#D32F2F";
-        message.textContent = "❌ Error connecting to server";
+        message.textContent = `❌ ${err.message || "Error connecting to server"}`;
       }
     });
   </script>
-  
 </body>
 </html>
