--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -357,23 +357,6 @@ body {
 
 
 
-#addUserBtn {
-  position: fixed;
-  bottom: 80px;
-  right: 20px;
-  background: red;
-  color: white;
-  border: none;
-  font-size: 32px;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-  cursor: pointer;
-  z-index: 999;
-}
-
-
     </style>
 </head>
 <body>
@@ -391,6 +374,15 @@ body {
         <ul class="user-list" id="userList">
             <!-- Users will be added here dynamically -->
         </ul>
+    </div>
+
+    <div class="modal" id="addUserModal">
+        <div class="modal-content">
+            <h3>Add a Bee</h3>
+            <input type="text" id="usernameInput" placeholder="Bee name" />
+            <p id="errorMessage" style="color: var(--danger-color); font-size: 14px; display: none;">Please enter a valid name</p>
+            <button id="submitUserBtn">Add</button>
+        </div>
     </div>
 
    <!-- FIXED VERSION -->
@@ -457,18 +449,5 @@ body {
 
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="/BeeMazing-Y1/web/1-Home/home.js"></script>
-
-    <!-- 🎯 Invite User Modal -->
-    <div id="inviteUserModal" class="modal">
-        <div class="modal-content">
-          <h3 style="margin-bottom: 12px;">Invite a New User</h3>
-          <input type="email" id="inviteEmail" placeholder="Email" required />
-          <input type="text" id="inviteName" placeholder="Name" required />
-          <input type="text" id="inviteTempPassword" placeholder="Temporary Password" required />
-          <button id="sendInviteBtn">Send Invite</button>
-        </div>
-      </div>
-      
-  
 </body>
 </html>
